# sharing

./: .gitignore  README.md  config.py  main.py  pyproject.toml
api/: deps.py  router.py
api/endpoints/: auth.py  comments.py  favorites.py  images.py  notifications.py  projects.py  ratings.py  tags.py  users.py
core/: __init__.py  register.py
core/exceptions/: __init__.py  base.py  business_error.py  client_errors.py  server_errors.py
core/handlers/: __init__.py  exception_handler.py
jsons/: GitHubAPI_repo.json  GitHubAPI_repo_contributors.json  GitHubAPI_repo_languages.json  GiteeAPI_repo.json
models/: elastic_models.py  models.py
schemas/: comments.py  common.py  favorites.py  image.py  images.py  notifications.py  projects.py  ratings.py  tags.py  users.py
services/: auth_service.py  comment_service.py  notification_service.py  project_service.py  rating_service.py  tag_service.py  user_service.py
tasks/: elastic_sync.py  project_sync.py
tests/: test_gen.py  test_tortoise.py
utils/: database.py  elastic_client.py  gitee_api.py  github_api.py  httpx_client.py  security.py  time.py
